# aoc-py

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/cli/: animation_renderer.py  game_interface.py  input_reader.py  io_handler.py  output_writer.py  parse_problem_ids.py  progress_monitor.py  result_checker.py
src/core/: animation_renderer.py  game_interface.py  input_reader.py  io_handler.py  output_writer.py  progress_monitor.py  result_checker.py
src/scripts/: setup_solution.py
src/solutions/: conftest.py
src/solutions/shared/cellular_automata/: __init__.py  binary_automaton.py  cellular_automaton.py  game_of_life.py  wireworld.py
src/solutions/shared/geometry/: __init__.py  bounding_box.py  direction.py  hexagonal.py  vector_2d.py  vector_3d.py
src/solutions/shared/graph/: __init__.py  a_star.py  bfs.py  dfs.py  dijkstra.py  disjoint_set.py  undirected_graph.py  weighted_directed_graph.py  weighted_undirected_graph.py
src/solutions/shared/number_theory/: __init__.py  divisors.py  interval.py  sum_of_divisors.py
src/solutions/shared/optimization/: milp_model.py
src/solutions/shared/parser/: __init__.py  character_grid.py  csv_parser.py  direction_parser.py  grid_parser.py
src/solutions/shared/tests/: test_cellular_automata.py  test_geometry.py  test_graph.py  test_milp_model.py  test_number_theory.py  test_shared_parser.py  test_vm.py
src/solutions/shared/vm/: __init__.py  computer.py  hardware.py  instruction.py  memory.py  processor.py  program.py  serial_io.py
src/solutions/y2015/d01/: solution.py
(+399 files in other folders)
